--- a/manifest.chrome.json
+++ b/manifest.chrome.json
@@ -3,6 +3,7 @@
   "name": "Video Chapters Generator",
   "version": "1.0.0-BUILD_INJECTED",
   "description": "Generate chapter timecodes from YouTube videos using AI subtitle analysis",
+  "default_locale": "en",
   
   "permissions": [
     "activeTab",
