--- a/manifest.firefox.json
+++ b/manifest.firefox.json
@@ -41,7 +41,8 @@
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
-    }
+    },
+    "default_locale": "en"
   },
   "options_page": "options/options.html",
   "icons": {
