package source code

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "npm run build:chrome && npm run build:firefox",
     "package:chrome": "node scripts/package.js --output dist/chrome",
     "package:firefox": "node scripts/package.js --output dist/firefox",
-    "package": "npm run package:chrome && npm run package:firefox",
+    "package": "npm run package:chrome && npm run package:firefox && npm run package:source",
+    "package:source": "node scripts/package.js --source",
     "validate:chrome": "node scripts/validate.js --package --output dist/chrome",
     "validate:firefox": "node scripts/validate.js --package --output dist/firefox",
     "validate": "npm run validate:chrome && npm run validate:firefox",
