--- a/manifest.firefox.json
+++ b/manifest.firefox.json
@@ -15,6 +15,7 @@
   ],
   "background": {
     "scripts": [
+      "utils/url-utils.js",
       "background/errorhandler.js",
       "background/prompt-generator.js",
       "background/llm.js", 
