--- a/manifest.firefox.json
+++ b/manifest.firefox.json
@@ -17,6 +17,18 @@
     "scripts": [
       "utils/url-utils.js",
       "background/errorhandler.js",
+      "domain/values/VideoUrl.js",
+      "domain/values/ModelId.js",
+      "domain/values/ApiCredentials.js",
+      "domain/values/GenerationProgress.js",
+      "domain/entities/VideoTranscript.js",
+      "domain/entities/ChapterGeneration.js",
+      "domain/entities/BrowserTab.js",
+      "infrastructure/repositories/SessionRepository.js",
+      "infrastructure/repositories/TabRegistry.js",
+      "infrastructure/repositories/SettingsRepository.js",
+      "domain/services/TranscriptExtractor.js",
+      "domain/services/ChapterGenerator.js",
       "background/prompt-generator.js",
       "background/llm.js", 
       "background/gemini-api.js",
