--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "validate:chrome": "node scripts/validate.js --package --output dist/chrome",
     "validate:firefox": "node scripts/validate.js --package --output dist/firefox",
     "validate": "npm run validate:chrome && npm run validate:firefox",
-    "test": "node scripts/test.js",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:old": "node scripts/test.js",
     "test:edge": "node scripts/test.js --edge",
     "test:performance": "node scripts/test.js --performance",
     "clean": "node scripts/clean.js",
@@ -38,6 +41,7 @@
     "eslint": "^8.57.0",
     "fs-extra": "^11.2.0",
     "glob": "^10.3.10",
+    "jest": "^29.7.0",
     "jimp": "^0.22.10",
     "json5": "^2.2.3",
     "ora": "^5.4.1",
