Rename llm.js to BaseLLM.js for naming consistency
- Rename src/background/llm.js to src/background/BaseLLM.js
- Update all references in background.js, manifest.firefox.json
- Update documentation in DEVELOPMENT.md
- Follow project convention: filename matches class name

This maintains consistency with other files like SessionRepository.js,
ChapterGeneration.js, VideoTranscript.js, etc.

Crafted by [Claude Code](https://claude.ai/code) — the AI used with judgment.

--- a/manifest.firefox.json
+++ b/manifest.firefox.json
@@ -37,7 +37,7 @@
       "domain/services/TranscriptExtractor.js",
       "domain/services/ChapterGenerator.js",
       "background/prompt-generator.js",
-      "background/llm.js", 
+      "background/BaseLLM.js", 
       "background/gemini-api.js",
       "background/openrouter-api.js",
       "infrastructure/adapters/GeminiApiAdapter.js",
