Replace useless validate script with useful one
- Delete overcomplicated validate.js script that duplicated build checks
- Create simple validate = lint + test + build workflow
- Add ci script as alias for validate (common CI pattern)
- Remove redundant package validation that checked for non-issues

Now npm run validate actually validates the important things.

Crafted by [Claude Code](https://claude.ai/code) — the AI used with judgment.

--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "package:firefox": "node scripts/package.js --output dist/firefox",
     "package": "npm run package:chrome && npm run package:firefox && npm run package:source",
     "package:source": "node scripts/package.js --source",
-    "validate:chrome": "node scripts/validate.js --package --output dist/chrome",
-    "validate:firefox": "node scripts/validate.js --package --output dist/firefox",
-    "validate": "npm run validate:chrome && npm run validate:firefox",
+    "validate": "npm run lint && npm run test && npm run build",
+    "ci": "npm run validate",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
