Improve package script to ensure clean validated builds
Add clean and validate steps before packaging to ensure:
- Clean build environment (npm run clean)
- All tests pass and code quality checks succeed (npm run validate)
- Distribution packages are built from validated, tested code

This prevents packaging potentially broken builds.

Crafted by [Claude Code](https://claude.ai/code) — the AI used with judgment.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "npm run build:chrome && npm run build:firefox",
     "package:chrome": "node scripts/package.js --output dist/chrome",
     "package:firefox": "node scripts/package.js --output dist/firefox",
-    "package": "npm run package:chrome && npm run package:firefox && npm run package:source",
+    "package": "npm run clean && npm run validate && npm run package:chrome && npm run package:firefox && npm run package:source",
     "package:source": "node scripts/package.js --source",
     "validate": "npm run lint && npm run test && npm run build",
     "ci": "npm run validate",
