--- a/manifest.chrome.json
+++ b/manifest.chrome.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Video Chapters Generator",
+  "name": "Chaptotek",
   "version": "1.0.0-BUILD_INJECTED",
   "description": "Organize YouTube videos into chapters with AI-powered headlines and timecode generation",
   "default_locale": "en",
@@ -36,7 +36,7 @@
   
   "action": {
     "default_popup": "popup/popup.html",
-    "default_title": "Video Chapters Generator",
+    "default_title": "Chaptotek",
     "default_icon": {
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
