--- a/manifest.firefox.json
+++ b/manifest.firefox.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Video Chapters Generator",
+  "name": "Chaptotek",
   "version": "1.0.0-BUILD_INJECTED",
   "description": "Organize YouTube videos into chapters with AI-powered headlines and timecode generation",
   "default_locale": "en",
@@ -58,7 +58,7 @@
   ],
   "browser_action": {
     "default_popup": "popup/popup.html",
-    "default_title": "Video Chapters Generator",
+    "default_title": "Chaptotek",
     "default_icon": {
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
